resolve #6499 shifted helper text

--- a/packages/survey-creator-core/src/property-grid-theme/property-grid.scss
+++ b/packages/survey-creator-core/src/property-grid-theme/property-grid.scss
@@ -116,7 +116,7 @@
   // padding-left: 0;
 
   .spg-help-action {
-    flex-grow: 1;
+    margin-inline-end: auto;
 
     .spg-action-button--icon {
       padding: var(--ctr-actionbar-button-padding-top-small-icon, var(--sjs-spacing-x05))
